--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -96,7 +96,7 @@
 
 % theorem
 \newtcbtheorem[
-    number within=section,
+    number within=subsection,
     list inside=thms,
 ]{theorem}{Theorem}{
     theoremstyle,
@@ -180,6 +180,6 @@
 % | *** Equation *** |
 % *-------------------*
 
-\numberwithin{equation}{tcb@cnt@theorem}
+\numberwithin{equation}{subsubsection}
 
 \endinput
