--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -61,6 +61,9 @@
 
 \newcommand{\uvec}[1]{\munderbar{\bm{#1}}}
 
+% https://tex.stackexchange.com/a/5255
+\DeclareMathOperator*{\argmax}{arg\,max}
+\DeclareMathOperator*{\argmin}{arg\,min}
 
 % *-------------------*
 % | *** Theorems *** |
